# diffusion-curvature-old

./: ._03c_Absolute-Curvature-with-Laziness.ipynb  ._08-comparison-curvature.ipynb  ._Diffusion Entropy Curvature.ipynb  ._LICENSE  ._README.md  ._diffusion_curvature.egg-info  ._entropic_diffusion_curvature.org  ._get_diffusion_curvature.py  ._pyproject.toml  .devcontainer.json  .gitignore  00_core.ipynb  00a_diffusion_curvature_explained.ipynb  01_datasets.ipynb  01a_Constant-Curvature-Surface-Testing.ipynb  02_laziness.ipynb  02a_laziness_decay.ipynb  02b_region_limited_laziness.ipynb  02b_signed_inside_outside_curvature.ipynb  02c_flat_walk_estimation.ipynb  02d_differentiable_diffusion_curvature.ipynb  03_Ground-truth-comparisons.ipynb  03_laziness_decay.ipynb  03a_hyperboloid-tests.ipynb  03b_Testing-Avg-Transition-Prob-Curvature.ipynb  03c_Absolute-Curvature-with-Laziness.ipynb  03d_ground_truth_comparisons.ipynb  03e_Comparison with Ollivier Ricci.ipynb  04_region_limited_laziness.ipynb  05_positive_vs_negative_detection.ipynb  05a_gaussian_explorations.ipynb  05b_gaussian_invariance.ipynb  06_flat_walk_estimation.ipynb  06c_volume_comparison_curvature.ipynb  08-comparison-curvature.ipynb  08-hyperboloid-tests.ipynb  08a_Uniform_Random_Sampling_Comparison.ipynb  08b_continuous_normalizing_flows.ipynb  08c_sampling_learned_by_ode.ipynb  09a_curvature_curves_in_euclidean_space.ipynb  (+54 more)
ARCHIVE/: ._02b_signed_inside_outside_curvature.ipynb  ._09b_analytic_curvature_curves.ipynb  00a_diffusion_curvature_explained.ipynb  01a_Constant-Curvature-Surface-Testing.ipynb  (+19 more)
(+50 files in other folders)
