[tool.poetry]
name = "diffusion-curvature"
version = "0.1.0"
description = "Fast, pointwise graph curvature"
authors = ["Professor Wug <dev@riddle.press>"]
readme = "README.md"
packages = [{include = "diffusion_curvature"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
tqdm = "^4.65.0"
scipy = "^1.11.1"
scikit-learn = "^1.2.2"
notebook = "^6.5.4"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
